fixed text wrapping bug

--- a/public/style.css
+++ b/public/style.css
@@ -41,7 +41,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #282c34;
-  max-width: 75%;
+  min-width: 75%;
 }
 
 .chat-header {
@@ -71,6 +71,7 @@ body {
   padding: 10px;
   border-radius: 5px;
   font-weight: 500;
+  max-width: 75vw;
 }
 
 .user-message {
